remove the a:link as it caused the links to misbehave

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
       <div class="linksbar">
 
-        <a href="https://github.com/Techron254" target="_blank">GitHub</a>
-        <a href="https://www.frontendmentor.io/profile/Techron254" target="_blank">Frontend Mentor</a>
-        <a href="https://linkedin.com/in/ronald-seroh" target="_blank">LinkedIn</a>
+        <a target="_blank" href="https://github.com/Techron254">GitHub</a>
+        <a target="_blank" href="https://www.frontendmentor.io/profile/Techron254">Frontend Mentor</a>
+        <a target="_blank" href="https://linkedin.com/in/ronald-seroh">LinkedIn</a>
         <a href="">Twitter</a>
         <a href="">Instagram</a>
 
