change the profile image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="style.css">
-  
+
   <title>Frontend Mentor | Social links profile</title>
 
 </head>
@@ -14,15 +14,15 @@
 
     <div class="links-profile">
       <div class="image-card">
-        <img id="profile-image" src="images/IMG_20240719_203904_471 copy.jpg" alt="My profile image">
+        <img id="profile-image" src="/images/profile-image.png" alt="My profile image">
         <h2>Ronald Seroh</h2>
 
         <div>
            <p id="location"> Nairobi, Kenya</p>
         </div>
-       
-      </div>  
-      
+
+      </div>
+
       <div class="quote">
         <p>
           <q>Front-end developer and avid reader.</q>
