--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="style.css">
+  <script defer src="main.js"></script>
 
   <title>Frontend Mentor | Social links profile</title>
 
@@ -34,8 +35,8 @@
         <a target="_blank" href="https://github.com/Techron254">GitHub</a>
         <a target="_blank" href="https://www.frontendmentor.io/profile/Techron254">Frontend Mentor</a>
         <a target="_blank" href="https://linkedin.com/in/ronald-seroh">LinkedIn</a>
-        <a href="">Twitter</a>
-        <a href="">Instagram</a>
+        <a id="twitter-button">Twitter</a>
+        <a id="instagram-button">Instagram</a>
 
       </div>
     </div>
